buildscript {
    ext {
        springBootVersion='3.0.8'
        springCloudVersion='2022.0.3'
        springCloudAlibaba='2022.0.0.0'

        hutoolVersion='5.8.29'
        lombokVersion='1.18.26'
        mysqlConnectorVersion='8.0.30'

        mybatisPlusVersion='3.5.3.1'
        druidStarterVersion='1.2.18'
        pagehelperVersion='5.3.1'

        httpclient5Version='5.2.1'
        caffeineVersion='3.1.8'
        jacksonVersion='2.14.3'
        jjwtVersion='0.13.0'
    }
}

plugins {
    id 'java'
    id 'idea'
    id 'maven-publish'
    id 'java-library'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'org.springframework.boot' version '3.0.8' apply false
}

group = 'com.blink'
version = '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

// 设置Java编译的编码
compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'

// 核心：覆盖源码集目录为不存在的路径，阻止自动生成
sourceSets {
    main {
        java {
            // 指向不存在的目录，Gradle不会创建src/main
            srcDir 'none'
        }
        resources {
            srcDir 'none'
        }
    }
    test {
        java {
            srcDir 'none'
        }
        resources {
            srcDir 'none'
        }
    }
}

// 跳过无需执行的任务
tasks.compileJava.enabled = false
tasks.processResources.enabled = false
tasks.test.enabled = false
tasks.jar.enabled = false


subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'maven-publish'
    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'


    group = 'com.blink'
    version = '1.0.0-SNAPSHOT'

    java {
        sourceCompatibility = '17'
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
    }


    repositories {
        mavenLocal()
        maven {
            allowInsecureProtocol true
            url "http://localhost:8081/repository/maven-public/"
            credentials {
                username project.findProperty('repositories.username')
                password project.findProperty('repositories.password')

            }
        }
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom "com.alibaba.cloud:spring-cloud-alibaba-dependencies:${springCloudAlibaba}"
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
            mavenBom "cn.hutool:hutool-bom:${hutoolVersion}"

        }
    }

    dependencies {

        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                // 指定要发布的组件，通常为java组件，它包含了主jar包的信息
                from components.java
                // 也可以单独指定 groupId, artifactId, version，如果未指定，则使用项目默认的
                groupId = 'com.blink'
                artifactId = project.name
                version = '1.0.0-SNAPSHOT'

                // 添加生成的源码包和文档包
//            artifact tasks.named('sourcesJar')
//            artifact tasks.named('javadocJar')

                versionMapping {
                    usage('java-api') {
                        fromResolutionOf('runtimeClasspath')
                    }
                    usage('java-runtime') {
                        fromResolutionResult()
                    }
                }
            }
        }

        repositories {
            maven {
                allowInsecureProtocol true
                url "http://localhost:8081/repository/maven-snapshots/"
                credentials {
                    username project.findProperty('repositories.username')
                    password project.findProperty('repositories.password')
                }
            }

        }
    }

}

